--- a/GoodPT/accounts/static/css/login.css
+++ b/GoodPT/accounts/static/css/login.css
@@ -3,12 +3,10 @@
 * {
   box-sizing: border-box;
 }
-body {
+.wrapper {
   font-family: "Montserrat", sans-serif;
   margin: 0;
   padding: 0;
-}
-.wrapper {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -25,7 +23,7 @@ body {
   min-height: 480px;
   overflow: hidden;
 }
-form {
+.login_form{
   background: #ebecf0;
   display: flex;
   flex-direction: column;
@@ -44,7 +42,7 @@ form input {
   border-radius: 20px;
   box-shadow: inset 7px 2px 10px #babebc, inset -5px -5px 12px #fff;
 }
-button {
+.form_btn {
   border-radius: 20px;
   border: none;
   outline: none;
@@ -56,14 +54,34 @@ button {
   text-transform: uppercase;
   cursor: pointer;
   transition: transform 80ms ease-in;
-}
-.form_btn {
   box-shadow: -5px -5px 10px #fff, 5px 5px 8px #babebc;
 }
 .form_btn:active {
+  border-radius: 20px;
+  border: none;
+  outline: none;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 15px 45px;
+  margin: 14px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: transform 80ms ease-in;
   box-shadow: inset 1px 1px 2px #babebc, inset -1px -1px 2px #fff;
 }
 .overlay_btn {
+  border-radius: 20px;
+  border: none;
+  outline: none;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 15px 45px;
+  margin: 14px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: transform 80ms ease-in;
   background-color: #ff4b2b;
   color: #fff;
   box-shadow: -5px -5px 10px #ff6b3f, 5px 5px 8px #bf4b2b;
@@ -138,14 +156,13 @@ form h1 {
   margin: 0;
   color: #000;
 }
-
-p {
+.login_detail {
   font-size: 16px;
   font-weight: bold;
   letter-spacing: 0.5px;
   margin: 20px 0 30px;
 }
-span {
+.login_span {
   font-size: 12px;
   color: #000;
   letter-spacing: 0.5px;
