--- a/GoodPT/accounts/templates/login.html
+++ b/GoodPT/accounts/templates/login.html
@@ -5,6 +5,7 @@
         <div class="wrapper">
             <div class="container">
             <div class="sign-up-container">
+                <div class = "login_form">
                 <form>
                 <h1>Create Account</h1>
                 <div class="social-links">
@@ -18,14 +19,18 @@
                     <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                     </div>
                 </div>
-                <span>or use your email for registration</span>
+                <div class = "login_span">
+                    or use your email for registration
+                </div>
                 <input type="text" placeholder="Name">
                 <input type="email" placeholder="Email">
                 <input type="password" placeholder="Password">
                 <button class="form_btn">Sign Up</button>
-                </form>
+            </div>    
+            </form>
             </div>
             <div class="sign-in-container">
+                <div class="login_form">
                 <form>
                 <h1>Sign In</h1>
                 <div class="social-links">
@@ -39,22 +44,29 @@
                     <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                     </div>
                 </div>
-                <span>or use your account</span>
+                <div class = "login_span">
+                    or use your account
+                </div>
                 <input type="email" placeholder="Email">
                 <input type="password" placeholder="Password">
                 <button class="form_btn">Sign In</button>
-                </form>
+            </div>    
+            </form>
             </div>
             <div class="overlay-container">
                 <div class="overlay-left">
                 <h1>Welcome Back</h1>
-                <p>To keep connected with us please login with your personal info</p>
+                <div class = "login_detail">
+                    <p>To keep connected with us please login with your personal info</p>
+                </div>
                 <button id="signIn" class="overlay_btn">Sign In</button>
                 </div>
                 <div class="overlay-right">
                 <h1>Hello, Friend</h1>
-                <p>Enter your personal details and start journey with us</p>
-                <button id="signUp" class="overlay_btn">Sign Up</button>
+                <div class = "login_detail">
+                    <p>Enter your personal details and start journey with us</p>
+                </div>
+                    <button id="signUp" class="overlay_btn">Sign Up</button>
                 </div>
             </div>
             </div>
