--- a/GoodPT/accounts/templates/naver.html
+++ b/GoodPT/accounts/templates/naver.html
@@ -15,12 +15,13 @@
 
 <!-- 네이버 스크립트 -->
 <script src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.2.js" charset="utf-8"></script>
+<script defer src = 'Mouse-PT\GoodPT\keys\keys.js'></script>
 
 <script>
 
 var naverLogin = new naver.LoginWithNaverId(
 		{
-			clientId: "myclientID", //내 애플리케이션 정보에 cliendId를 입력해줍니다.
+			clientId: naverClientID, //내 애플리케이션 정보에 cliendId를 입력해줍니다.
 			callbackUrl: "http://localhost:8000/login", // 내 애플리케이션 API설정의 Callback URL 을 입력해줍니다.
 			isPopup: false,
 			callbackHandle: true
