--- a/GoodPT/accounts/templates/login.html
+++ b/GoodPT/accounts/templates/login.html
@@ -32,7 +32,7 @@
             <div class="sign-in-container">
                 <div class="login_form">
                 <form>
-                <h1>Sign In</h1>
+                <h1>회원가입</h1>
                 <div class="social-links">
                     <div>
                     <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div class = "login_span">
-                    or use your account
+                소셜 로그인을 하시거나 사이트 로그인을 해주세요
                 </div>
                 <input type="email" placeholder="Email">
                 <input type="password" placeholder="Password">
