feat : google login

--- a/GoodPT/accounts/templates/naver.html
+++ b/GoodPT/accounts/templates/naver.html
@@ -15,9 +15,9 @@
 
 <!-- 네이버 스크립트 -->
 <script src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.2.js" charset="utf-8"></script>
-<script defer src = 'Mouse-PT\GoodPT\keys\keys.js'></script>
+<script type="text/javascript" src = '/static/js/keys.js'></script>
 
-<script>
+<script defer>
 
 var naverLogin = new naver.LoginWithNaverId(
 		{
@@ -66,3 +66,4 @@ function naverLogout() {
 	
 }
 </script>
+
