--- a/GoodPT/board/templates/board/question_detail.html
+++ b/GoodPT/board/templates/board/question_detail.html
@@ -1,14 +1,14 @@
-{% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
+{% extends 'base.html' %} {% block content %}
 <div class="container my-3">
     <!-- 질문 -->
     <h2 class="border-bottom py-2">{{ question.subject }}</h2>
     <div class="card my-3">
         <div class="card-body">
-            <div class="card-text" style="white-space: pre-line;">{{ question.content }}</div>
+            <div class="card-text" style="white-space: pre-line">{{ question.content }}</div>
             <div class="d-flex justify-content-end">
-                <div class="badge bg-light text-dark p-2">
-                    {{ question.create_date }}
+                <div class="badge bg-light text-dark p-2 text-start">
+                    <div class="mb-2">{{ question.author.username }}</div>
+                    <div>{{ question.create_date }}</div>
                 </div>
             </div>
         </div>
@@ -18,10 +18,11 @@
     {% for answer in question.answer_set.all %}
     <div class="card my-3">
         <div class="card-body">
-            <div class="card-text" style="white-space: pre-line;">{{ answer.content }}</div>
+            <div class="card-text" style="white-space: pre-line">{{ answer.content }}</div>
             <div class="d-flex justify-content-end">
-                <div class="badge bg-light text-dark p-2">
-                    {{ answer.create_date }}
+                <div class="badge bg-light text-dark p-2 text-start">
+                    <div class="mb-2">{{ answer.author.username }}</div>
+                    <div>{{ answer.create_date }}</div>
                 </div>
             </div>
         </div>
@@ -29,11 +30,24 @@
     {% endfor %}
     <!-- 답변 등록 -->
     <form action="{% url 'board:answer_create' question.id %}" method="post" class="my-3">
-        {% csrf_token %}
+        {% csrf_token %} {% include "form_errors.html" %}
         <div class="mb-3">
             <label for="content" class="form-label">답변내용</label>
-            <textarea name="content" id="content" class="form-control" rows="10"></textarea>
+            <textarea
+                {%
+                if
+                not
+                user.is_authenticated
+                %}disabled{%
+                endif
+                %}
+                name="content"
+                id="content"
+                class="form-control"
+                rows="10"
+            ></textarea>
         </div>
-        <input type="submit" value="답변등록" class="btn btn-primary">
+        <input type="submit" value="답변등록" class="btn btn-primary" />
     </form>
 </div>
+{% endblock %}
