feat : login api 위치 수정

--- a/GoodPT/accounts/templates/login.html
+++ b/GoodPT/accounts/templates/login.html
@@ -8,17 +8,7 @@
                 <div class = "login_form">
                 <form>
                 <h1>계정 생성하기</h1>
-                <div class="social-links">
-                    <div>
-                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                    </div>
-                    <div>
-                    <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                    </div>
-                    <div>
-                    <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                    </div>
-                </div>
+
                 <div class = "login_span">
                     
                 </div>
@@ -32,7 +22,13 @@
             <div class="sign-in-container">
                 <div class="login_form">
                 <form>
-                <h1>회원가입</h1>
+                <h1>로그인</h1>
+                <div class = "login_span">
+                소셜 로그인 또는 사이트 로그인을 해주세요.
+                </div>
+
+                <input type="email" placeholder="이메일">
+                <input type="password" placeholder="비밀번호">
                 <div class="social-links">
                     <div>
                     <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -44,11 +40,6 @@
                     <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                     </div>
                 </div>
-                <div class = "login_span">
-                소셜 로그인 또는 사이트 로그인을 해주세요.
-                </div>
-                <input type="email" placeholder="이메일">
-                <input type="password" placeholder="비밀번호">
                 <button class="form_btn">로그인</button>
             </div>    
             </form>
