개인정보처리방침1

--- a/GoodPT/accounts/templates/login.html
+++ b/GoodPT/accounts/templates/login.html
@@ -62,6 +62,18 @@
             </div>
             </div>
         </div>
+        <footer>
+           
+              
+            
+            <ul class="ft_link">
+                <li><a href="http://localhost:8000/login/privacy" onclick="privacypolicy()">개인정보 처리방침</a></li>
+               
+              
+            
+        </footer>
+        <!-- 모달 창 -->
+   
     </body>
     <link rel="stylesheet" href="/static/css/login.css"/>
     <script defer src = '/static/js/login.js'></script>
