--- a/GoodPT/accounts/templates/privacyPolicy.html
+++ b/GoodPT/accounts/templates/privacyPolicy.html
@@ -31,7 +31,7 @@
 
 </header>
            
-
+<ul style="list-style: none;">
 <div class="contents terms privacy_policy">
 				<div class="page_title">
 					<h2>개인정보처리방침</h2>
