pricing table 구현

--- a/GoodPT/templates/index.html
+++ b/GoodPT/templates/index.html
@@ -100,7 +100,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-xxl-5 text-center mx-auto mb-5">
-          <h2>Types of hosting that we provide</h2>
+          <h2>Membership Guide</h2>
           <p class="mb-5">Our service is always affordable for everyone. </p>
         </div>
       </div>
@@ -108,18 +108,18 @@
         <div class="col-sm-6 col-xl-3 mb-3">
           <div class="card card-span shadow py-4 h-100 border-top border-4 border-primary">
             <div class="card-body">
-              <div class="text-center"><img src="{% static '/img/icons/shared-hosting.png' %}" alt="..." />
-                <h5 class="my-3">SHARED HOSTING</h5>
+              <div class="text-center"><img src="{% static '/img/icons/letter-b.png' %}" height="80" width="80" alt="..." />
+                <h5 class="my-3">Basic</h5>
                 <ul class="list-unstyled">
-                  <li>Increase the rank of you</li>
-                  <li>website by the higher speed</li>
+                  <li>발표 리포트 5 Limit</li>
+                  <li>계정 등록기기 1대까지</li>
                 </ul>
               </div>
             </div>
             <div class="border-top bg-white text-center pt-3 pb-0">
               <p class="mb-0">Get started at </p>
               <div class="d-flex justify-content-center">
-                <h3 class="fw-normal">15.99</h3><span class="d-flex align-items-center">/month</span>
+                <h3 class="fw-normal">4,990원</h3><span class="d-flex align-items-center">/month</span>
               </div>
             </div>
           </div>
@@ -127,18 +127,18 @@
         <div class="col-sm-6 col-xl-3 mb-3">
           <div class="card card-span shadow py-4 h-100 border-top border-4 border-primary">
             <div class="card-body">
-              <div class="text-center"><img src="{% static '/img/icons/vpn-hosting.png' %}" alt="..." />
-                <h5 class="my-3">VPS HOSTING</h5>
+              <div class="text-center"><img src="{% static '/img/icons/letter-s.png' %}" height="80" width="80" alt="..." />
+                <h5 class="my-3">Standard</h5>
                 <ul class="list-unstyled">
-                  <li>Be able to conceal your ID </li>
-                  <li>whenever needed</li>
+                  <li>발표 리포트 15 Limit </li>
+                  <li>계정 등록기기 2대까지</li>
                 </ul>
               </div>
             </div>
             <div class="border-top bg-white text-center pt-3 pb-0">
               <p class="mb-0">Get started at </p>
               <div class="d-flex justify-content-center">
-                <h3 class="fw-normal">8.99</h3><span class="d-flex align-items-center">/month</span>
+                <h3 class="fw-normal">7,990원</h3><span class="d-flex align-items-center">/month</span>
               </div>
             </div>
           </div>
@@ -146,18 +146,18 @@
         <div class="col-sm-6 col-xl-3 mb-3">
           <div class="card card-span shadow py-4 h-100 border-top border-4 border-primary">
             <div class="card-body">
-              <div class="text-center"><img src="{% static '/img/icons/cloud-hosting.png' %}" alt="..." />
-                <h5 class="my-3">CLOUD HOSTING</h5>
+              <div class="text-center"><img src="{% static '/img/icons/letter-p.png' %}" height="80" width="80" alt="..." />
+                <h5 class="my-3">Premium</h5>
                 <ul class="list-unstyled">
-                  <li>Super convenient and highly </li>
-                  <li>customizable option</li>
+                  <li>발표 리포트 30 Limit </li>
+                  <li>계정 등록기기 3대까지</li>
                 </ul>
               </div>
             </div>
             <div class="border-top bg-white text-center pt-3 pb-0">
               <p class="mb-0">Get started at </p>
               <div class="d-flex justify-content-center">
-                <h3 class="fw-normal">7.99</h3><span class="d-flex align-items-center">/month</span>
+                <h3 class="fw-normal">9,990원</h3><span class="d-flex align-items-center">/month</span>
               </div>
             </div>
           </div>
@@ -165,18 +165,18 @@
         <div class="col-sm-6 col-xl-3 mb-3">
           <div class="card card-span shadow py-4 h-100 border-top border-4 border-primary">
             <div class="card-body">
-              <div class="text-center"><img src="{% static '/img/icons/wp-hosting.png' %}" alt="..." />
-                <h5 class="my-3">WORDPRESS HOSTING</h5>
+              <div class="text-center"><img src="{% static '/img/icons/letter-u.png' %}" height="80" width="80" alt="..." />
+                <h5 class="my-3">Ultimate</h5>
                 <ul class="list-unstyled">
-                  <li>With low cost and high variety</li>
-                  <li>of tools, plugins of your choice</li>
+                  <li>발표 리포트 No Limit</li>
+                  <li>계정 등록기기 5대까지</li>
                 </ul>
               </div>
             </div>
             <div class="border-top bg-white text-center pt-3 pb-0">
               <p class="mb-0">Get started at </p>
               <div class="d-flex justify-content-center">
-                <h3 class="fw-normal">13.99</h3><span class="d-flex align-items-center">/month</span>
+                <h3 class="fw-normal">13,990원</h3><span class="d-flex align-items-center">/month</span>
               </div>
             </div>
           </div>
