--- a/GoodPT/accounts/static/css/login.css
+++ b/GoodPT/accounts/static/css/login.css
@@ -67,8 +67,6 @@ form input {
     box-shadow: inset 1px 1px 2px #babebc, inset -1px -1px 2px #fff;
 }
 .overlay_btn {
-<<<<<<< HEAD
-<<<<<<< HEAD
   border-radius: 20px;
   border: none;
   outline: none;
@@ -80,135 +78,104 @@ form input {
   text-transform: uppercase;
   cursor: pointer;
   transition: transform 80ms ease-in;
-<<<<<<< HEAD
   color: #fff;
   background-color: #206efe;
   box-shadow: -5px -5px 10px , 5px 5px 8px #206efe;
-=======
-  background-color: #424D83;
-  border: 1px solid black;
-  color: black;
-  box-shadow: 5px 5px 5px , -3px -3px 3px #424D83;
->>>>>>> 89d8276 (edit main&login)
-=======
-=======
->>>>>>> ebf783c9e893fb86014b80c6a775e8efe8c1dca3
-    border-radius: 20px;
-    border: none;
-    outline: none;
-    font-size: 12px;
-    font-weight: bold;
-    padding: 15px 45px;
-    margin: 14px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    cursor: pointer;
-    transition: transform 80ms ease-in;
-    background-color: #424d83;
-    border: 1px solid black;
-    color: black;
-    box-shadow: 5px 5px 5px, -3px -3px 3px #424d83;
-<<<<<<< HEAD
->>>>>>> ebf783c (fix 로그인 css수정)
-=======
->>>>>>> ebf783c9e893fb86014b80c6a775e8efe8c1dca3
 }
 .sign-in-container {
-    position: absolute;
-    left: 0;
-    width: 50%;
-    height: 100%;
-    transition: all 0.5s;
+  position: absolute;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  transition: all 0.5s;
 }
 .sign-up-container {
-    position: absolute;
-    left: 0;
-    width: 50%;
-    height: 100%;
-    opacity: 0;
-    transition: all 0.5s;
+  position: absolute;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  opacity: 0;
+  transition: all 0.5s;
 }
 .overlay-left {
-    display: flex;
-    flex-direction: column;
-    padding: 0 50px;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    right: 0;
-    width: 50%;
-    height: 100%;
-    opacity: 0;
-    background-color: #424d83;
-    color: #fff;
-    transition: all 0.5s;
+  display: flex;
+  flex-direction: column;
+  padding: 0 50px;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right: 0;
+  width: 50%;
+  height: 100%;
+  opacity: 0;
+  background-color: #2b75ff;
+  color: #fff;
+  transition: all 0.5s;
 }
 .overlay-right {
-    display: flex;
-    flex-direction: column;
-    padding: 0 50px;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    right: 0;
-    width: 50%;
-    height: 100%;
-    background-color: #424d83;
-    color: #fff;
-    transition: all 0.5s;
+  display: flex;
+  flex-direction: column;
+  padding: 0 50px;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right: 0;
+  width: 50%;
+  height: 100%;
+  background-color: #2b75ff;
+  color: #fff;
+  transition: all 0.5s;
 }
-.container-login.right-panel-active .sign-in-container {
-    transform: translateX(100%);
-    opacity: 0;
+.container.right-panel-active .sign-in-container {
+  transform: translateX(100%);
+  opacity: 0;
 }
-.container-login.right-panel-active .sign-up-container {
-    transform: translateX(100%);
-    opacity: 1;
-    z-index: 2;
+.container.right-panel-active .sign-up-container {
+  transform: translateX(100%);
+  opacity: 1;
+  z-index: 2;
 }
-.container-login.right-panel-active .overlay-right {
-    transform: translateX(-100%);
-    opacity: 0;
+.container.right-panel-active .overlay-right {
+  transform: translateX(-100%);
+  opacity: 0;
 }
-.container-login.right-panel-active .overlay-left {
-    transform: translateX(-100%);
-    opacity: 1;
-    z-index: 2;
+.container.right-panel-active .overlay-left {
+  transform: translateX(-100%);
+  opacity: 1;
+  z-index: 2;
 }
 .social-links {
-    margin: 20px 0;
+  margin: 20px 0;
 }
 form h1 {
-    font-weight: bold;
-    margin: 0;
-    color: #000;
+  font-weight: bold;
+  margin: 0;
+  color: #000;
 }
 .login_detail {
-    font-size: 16px;
-    font-weight: bold;
-    letter-spacing: 0.5px;
-    margin: 20px 0 30px;
+  font-size: 16px;
+  font-weight: bold;
+  letter-spacing: 0.5px;
+  margin: 20px 0 30px;
 }
 .login_span {
-    font-size: 12px;
-    color: #000;
-    letter-spacing: 0.5px;
-    margin-bottom: 10px;
+  font-size: 12px;
+  color: #000;
+  letter-spacing: 0.5px;
+  margin-bottom: 10px;
 }
 .social-links div {
-    width: 40px;
-    height: 40px;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 5px;
-    border-radius: 50%;
-    box-shadow: -5px -5px 10px #fff, 5px 5px 8px #babebc;
-    cursor: pointer;
+  width: 40px;
+  height: 40px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 5px;
+  border-radius: 50%;
+  box-shadow: -5px -5px 10px #fff, 5px 5px 8px #babebc;
+  cursor: pointer;
 }
 .social-links a {
-<<<<<<< HEAD
-<<<<<<< HEAD
   
   color: #000;
   display : flex;
@@ -223,17 +190,3 @@ div a img {
   width : 50%;
   height : 50%;
 }
-=======
-    color: #000;
-}
-.social-links div:active {
-    box-shadow: inset 1px 1px 2px #babebc, inset -1px -1px 2px #fff;
-}
->>>>>>> ebf783c (fix 로그인 css수정)
-=======
-    color: #000;
-}
-.social-links div:active {
-    box-shadow: inset 1px 1px 2px #babebc, inset -1px -1px 2px #fff;
-}
->>>>>>> ebf783c9e893fb86014b80c6a775e8efe8c1dca3
