--- a/GoodPT/accounts/templates/login.html
+++ b/GoodPT/accounts/templates/login.html
@@ -21,16 +21,15 @@
             </div>
             <div class="sign-in-container">
                 <div class="login_form">
-                <form action="" method = "post">
-                    {%csrf_token%}
-                    {{form.as_table}}
+
                 <h1>로그인</h1>
                 <div class = "login_span">
                 소셜 로그인 또는 사이트 로그인을 해주세요.
                 </div>
-
-                {% comment %} <input type="email" name = "email" placeholder="이메일">
-                <input type="password" name = "password" placeholder="비밀번호"> {% endcomment %}
+                <form action="" method = "post">
+                    {%csrf_token%}
+                <input type="username" name = "username" placeholder="이메일">
+                <input type="password" name = "password" placeholder="비밀번호">
                 <div class="social-links">
                     <div>
                     <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -42,7 +41,7 @@
                     <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                     </div>
                 </div>
-                <input type="submit" class="form_btn">로그인</button>
+                <button type="submit" class="form_btn">로그인</button>
             </div>    
             </form>
             </div>
