feat: 게시판 수정, 삭제, 로그인 연동

--- a/GoodPT/board/templates/board/question_detail.html
+++ b/GoodPT/board/templates/board/question_detail.html
@@ -1,15 +1,53 @@
-{% extends 'base.html' %} {% block content %}
+{% extends "layout.html" %} {% block content %}
 <div class="container my-3">
+    <!-- message 표시 -->
+    {% if messages %}
+    <div class="alert alert-danger my-3" role="alert">
+        {% for message in messages %}
+        <strong>{{ message.tags }}</strong>
+        <ul>
+            <li>{{ message.message }}</li>
+        </ul>
+        {% endfor %}
+    </div>
+    {% endif %}
     <!-- 질문 -->
     <h2 class="border-bottom py-2">{{ question.subject }}</h2>
     <div class="card my-3">
         <div class="card-body">
             <div class="card-text" style="white-space: pre-line">{{ question.content }}</div>
             <div class="d-flex justify-content-end">
+                {% if question.modify_date %}
+                <div class="badge bg-light text-dark p-2 text-start mx-3">
+                    <div class="mb-2">modified at</div>
+                    <div>{{ question.modify_date }}</div>
+                </div>
+                {% endif %}
                 <div class="badge bg-light text-dark p-2 text-start">
                     <div class="mb-2">{{ question.author.username }}</div>
                     <div>{{ question.create_date }}</div>
                 </div>
+            </div>
+            <div class="my-3">
+                <a
+                    href="javascript:void(0)"
+                    data-uri="{% url 'board:question_vote' question.id  %}"
+                    class="recommend btn btn-sm btn-outline-secondary"
+                >
+                    추천
+                    <span class="badge rounded-pill bg-success">{{question.voter.count}}</span>
+                </a>
+                {% if request.user == question.author %}
+                <a href="{% url 'board:question_modify' question.id  %}" class="btn btn-sm btn-outline-secondary"
+                    >수정</a
+                >
+                <a
+                    href="javascript:void(0)"
+                    class="delete btn btn-sm btn-outline-secondary"
+                    data-uri="{% url 'board:question_delete' question.id  %}"
+                    >삭제</a
+                >
+                {% endif %}
             </div>
         </div>
     </div>
@@ -20,10 +58,35 @@
         <div class="card-body">
             <div class="card-text" style="white-space: pre-line">{{ answer.content }}</div>
             <div class="d-flex justify-content-end">
+                {% if answer.modify_date %}
+                <div class="badge bg-light text-dark p-2 text-start mx-3">
+                    <div class="mb-2">modified at</div>
+                    <div>{{ answer.modify_date }}</div>
+                </div>
+                {% endif %}
                 <div class="badge bg-light text-dark p-2 text-start">
                     <div class="mb-2">{{ answer.author.username }}</div>
                     <div>{{ answer.create_date }}</div>
                 </div>
+            </div>
+            <div class="my-3">
+                <a
+                    href="javascript:void(0)"
+                    data-uri="{% url 'board:answer_vote' answer.id  %}"
+                    class="recommend btn btn-sm btn-outline-secondary"
+                >
+                    추천
+                    <span class="badge rounded-pill bg-success">{{answer.voter.count}}</span>
+                </a>
+                {% if request.user == answer.author %}
+                <a href="{% url 'board:answer_modify' answer.id  %}" class="btn btn-sm btn-outline-secondary">수정</a>
+                <a
+                    href="#"
+                    class="delete btn btn-sm btn-outline-secondary"
+                    data-uri="{% url 'board:answer_delete' answer.id  %}"
+                    >삭제</a
+                >
+                {% endif %}
             </div>
         </div>
     </div>
@@ -33,21 +96,29 @@
         {% csrf_token %} {% include "form_errors.html" %}
         <div class="mb-3">
             <label for="content" class="form-label">답변내용</label>
-            <textarea
-                {%
-                if
-                not
-                user.is_authenticated
-                %}disabled{%
-                endif
-                %}
-                name="content"
-                id="content"
-                class="form-control"
-                rows="10"
-            ></textarea>
+            <textarea {% if not user.is_authenticated %}disabled{% endif %}
+                      name="content" id="content" class="form-control" rows="10"></textarea>
         </div>
         <input type="submit" value="답변등록" class="btn btn-primary" />
     </form>
 </div>
+{% endblock %} {% block script %}
+<script type="text/javascript">
+    const delete_elements = document.getElementsByClassName('delete');
+    Array.from(delete_elements).forEach(function (element) {
+        element.addEventListener('click', function () {
+            if (confirm('삭제하시겠습니까?')) {
+                location.href = this.dataset.uri;
+            }
+        });
+    });
+    const recommend_elements = document.getElementsByClassName('recommend');
+    Array.from(recommend_elements).forEach(function (element) {
+        element.addEventListener('click', function () {
+            if (confirm('추천하시겠습니까?')) {
+                location.href = this.dataset.uri;
+            }
+        });
+    });
+</script>
 {% endblock %}
