--- a/GoodPT/board/templates/board/question_form.html
+++ b/GoodPT/board/templates/board/question_form.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block content %}
+{% extends "layout.html" %} {% block content %}
 <div class="container">
     <h5 class="my-3 border-bottom pb-2">질문등록</h5>
     <form method="post" class="post-form my-3">
