--- a/GoodPT/board/templates/board/question_list.html
+++ b/GoodPT/board/templates/board/question_list.html
@@ -1,14 +1,14 @@
-{% extends 'base.html' %}
+{% extends "layout.html" %}
 {% load board_filter %}
 {% block content %}
-<div class="container my-3">
+<div class="container my-3" id="#qna_board">
     <table class="table">
         <thead>
-        <tr class="text-center table-dark">
-            <th>번호</th>
-            <th style="width:50%">제목</th>
-            <th>글쓴이</th>
-            <th>작성일시</th>
+        <tr class="text-center table-primary">
+            <th>No.</th>
+            <th style="width:50%">Question</th>
+            <th>user</th>
+            <th>time</th>
         </tr>
         </thead>
         <tbody>
@@ -74,6 +74,10 @@
         {% endif %}
     </ul>
     <!-- 페이징처리 끝 -->
+    {% if user.is_authenticated %}
     <a href="{% url 'board:question_create' %}" class="btn btn-primary">질문 등록하기</a>
+    {% else %}
+    <a class="btn btn-primary" href="/login">로그인 후 이용가능</a>
+    {% endif %}
 </div>
 {% endblock %}
