--- a/GoodPT/board/templates/navbar.html
+++ b/GoodPT/board/templates/navbar.html
@@ -16,7 +16,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
+                    {% if user.is_authenticated %}
+                    <a class="nav-link" href="/accounts/logout">{{ user.username }} (로그아웃)</a>
+                    {% else %}
                     <a class="nav-link" href="/login">로그인</a>
+                    {% endif %}
                 </li>
             </ul>
         </div>
