edit main&login page

--- a/GoodPT/accounts/templates/login.html
+++ b/GoodPT/accounts/templates/login.html
@@ -3,77 +3,73 @@
 {% load i18n %}
 {% load allauth account socialaccount %}
 {% block content %}
-        <link rel="stylesheet" href="{% static '/css/login.css' %}?after"/>
+        <link rel="stylesheet" href="{% static '/css/login.css' %}?after" />
         <script defer src = "{% static '/js/login.js' %}"></script>
         <div class="wrapper">
             <div class="container-login">
             <div class="sign-up-container">
                 <div class = "login_form">
-                <form method="post">
-                    {%csrf_token%}
-                <h1>계정 생성하기</h1>
-                <div class = "login_span">
-                    
+                    <div class='elements'>
+                        <form method="post">
+                            {%csrf_token%}
+                            <h1>계정 생성하기</h1>
+                            <div class = "login_span">
+                                
+                            </div>
+                            <input type="text" name="username" placeholder="이름">
+                            <input type="email" name = "email" placeholder="이메일">
+                            <input type="password" name="password1" placeholder="비밀번호">
+                            <input type="password" name="password2" placeholder="비밀번호확인">
+                            <button class="form_btn" name="register">회원가입</button>
+                        </form>
+                    </div>
                 </div>
-                <input type="text" name="username" placeholder="이름">
-                <input type="email" name = "email" placeholder="이메일">
-                <input type="password" name="password1" placeholder="비밀번호">
-                <input type="password" name="password2" placeholder="비밀번호확인">
-                <button class="form_btn" name="register">회원가입</button>
-            </div>    
-            </form>
             </div>
             
             <div class="sign-in-container">
                 <div class="login_form">
-
-                <h1>로그인</h1>
-                <div class = "login_span">
-                소셜 로그인 또는 사이트 로그인을 해주세요.
-                </div>
-                <form action="" method = "post">
-                    {%csrf_token%}
-                <input type="username" name = "username" placeholder="이메일">
-                <input type="password" name = "password" placeholder="비밀번호">
-                <div class="social-links">
-                    <div>
-                        <a href="{% provider_login_url 'kakao' method='oauth2' %}"><img src="/static/img/kakao.png" style="
-                        width: 50%;
-                        height: 50%;
-                    "></i></a>
-                    </div>
-                    <div>
-                        <a href="{% provider_login_url 'naver' method='oauth2' %}"><img src="/static/img/naver.png" style="
-                        width: 50%;
-                        height: 50% ;
-                    "></i></a>
-                    </div>
-                    <div>
-                        <a href="{% provider_login_url 'google' method='oauth2' %}"><img src = '/static/img/google.png'></i></a>
+                    <div class='elements'>
+                        <h1>로그인</h1>
+                        <div class = "login_span">
+                            소셜 로그인 또는 사이트 로그인을 해주세요.
+                        </div>
+                        <form action="" method = "post">
+                            {%csrf_token%}
+                            <input type="username" name = "username" placeholder="이메일">
+                            <input type="password" name = "password" placeholder="비밀번호">
+                            <div class="social-links">
+                                <div>
+                                    <a href="{% provider_login_url 'kakao' method='oauth2' %}"><img id="login-logo" src="/static/img/kakao.png"></a>
+                                </div>
+                                <div>
+                                    <a href="{% provider_login_url 'naver' method='oauth2' %}"><img id="login-logo" src="/static/img/naver.png"></a>
+                                </div>
+                                <div>
+                                    <a href="{% provider_login_url 'google' method='oauth2' %}"><img id="login-logo" src = '/static/img/google.png'></a>
+                                </div>
+                            </div>
+                            <button type="submit" class="form_btn" name="login">로그인</button>
+                        </form>
                     </div>
                 </div>
-                <button type="submit" class="form_btn" name="login">로그인</button>
-            </div>    
-            </form>
             </div>
             <div class="overlay-container">
                 <div class="overlay-left">
-                <h1>환영합니다!</h1>
-                <div class = "login_detail">
-                    <p>회원정보를 입력해 가입을 진행해주세요.</p>
-                </div>
-                <button id="signIn" class="overlay_btn">로그인</button>
+                    <h1>환영합니다!</h1>
+                    <div class = "login_detail">
+                        <p>회원정보를 입력해 가입을 진행해주세요.</p>
+                    </div>
+                    <button id="signIn" class="overlay_btn">로그인</button>
                 </div>
                 <div class="overlay-right">
-                <h1>발표력을 증진 시키세요!</h1>
-                <div class = "login_detail">
-                    <p>우리 서비스에서 여러분의 발표능력을 향상시켜드리겠습니다.</p>
-                </div>
+                    <h2> Good-PT에서</h2>
+                    <div class = "login_detail">
+                        <p>여러분의 발표능력을 향상시켜보세요.</p>
+                    </div>
                     <button id="signUp" class="overlay_btn">회원가입</button>
                 </div>
             </div>
         </div>
-    </div>
         <footer>
             <ul class="ft_link">
                 <li><a href="http://localhost:8000/login/privacy" onclick="privacypolicy()">개인정보 처리방침</a></li>
