--- a/GoodPT/templates/index.html
+++ b/GoodPT/templates/index.html
@@ -10,6 +10,22 @@
     }
   </style>
 
+  <section id="home">
+    <div class="bg-holder" style="background-image:url({% static '/img/gallery/hero.png' %});background-position:center;background-size:cover;">
+    </div>
+    <!--/.bg-holder-->
+
+    <div class="container">
+      <div class="row align-items-center min-vh-50 min-vh-sm-75">
+        <div class="col-md-5 col-lg-6 order-0 order-md-1"><img class="w-100" src="{% static '/img/illustrations/hero-header.png' %}" alt="..." /></div>
+        <div class="col-md-7 col-lg-6 text-md-start text-center">
+          <h1 class="text-light fs-md-5 fs-lg-6">Get a Confidence</h1>
+          <p class="text-light">with Good-PT</p><a class="btn btn-primary" href="#" role="button">Start Presentation</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- ============================================-->
   <!-- <section> begin ============================-->
   <section class="pt-8">
