--- a/GoodPT/accounts/static/css/login.css
+++ b/GoodPT/accounts/static/css/login.css
@@ -1,7 +1,7 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css');
 
 .wrapper {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat", sans-serif !important;
   margin: 0;
   padding: 0;
   width: 100%;
@@ -18,6 +18,7 @@
     width: 768px;
     min-height: 480px;
     overflow: hidden;
+    margin-top: 100px;
 }
 .login_form {
     background: #ebecf0;
@@ -26,7 +27,11 @@
     padding: 0 50px;
     height: 100%;
     justify-content: center;
-    align-items: center;
+    /* align-items: center !important; */
+}
+.elements{
+  display: inline-block;
+  text-align: center;
 }
 form input {
     background: #eee;
@@ -37,7 +42,8 @@ form input {
     outline: none;
     border-radius: 20px;
     box-shadow: inset 7px 2px 10px #babebc, inset -5px -5px 12px #fff;
-}
+    color: black;
+  }
 .form_btn {
     border-radius: 20px;
     border: none;
@@ -78,9 +84,9 @@ form input {
   text-transform: uppercase;
   cursor: pointer;
   transition: transform 80ms ease-in;
-  background-color: #2b75ff;
+  background-color: #424D83;
   color: #fff;
-  box-shadow: -5px -5px 10px , 5px 5px 8px #206efe;
+  box-shadow: 5px 5px 5px black;
 }
 .sign-in-container {
   position: absolute;
@@ -108,7 +114,7 @@ form input {
   width: 50%;
   height: 100%;
   opacity: 0;
-  background-color: #2b75ff;
+  background-color: #424D83;
   color: #fff;
   transition: all 0.5s;
 }
@@ -122,7 +128,7 @@ form input {
   right: 0;
   width: 50%;
   height: 100%;
-  background-color: #2b75ff;
+  background-color: #424D83;
   color: #fff;
   transition: all 0.5s;
 }
@@ -186,7 +192,7 @@ form h1 {
   box-shadow: inset 1px 1px 2px #babebc, inset -1px -1px 2px #fff;
 }
 
-div a img {
+#login-logo {
   width : 50%;
   height : 50%;
 }
