--- a/GoodPT/templates/layout.html
+++ b/GoodPT/templates/layout.html
@@ -38,7 +38,7 @@
     <!--    Main Content-->
     <!-- ===============================================-->
     <main class="main" id="top">
-      <nav class="navbar navbar-expand-lg navbar-light fixed-top py-4 d-block" data-navbar-on-scroll="data-navbar-on-scroll">
+      <nav class="navbar navbar-expand-lg navbar-light fixed-top py-4 d-block" data-navbar-on-scroll="data-navbar-on-scroll" style="background-color:#424D83">
         <div class="container"><a class="navbar-brand" href="/"><img src="{% static '/img/gallery/logo.png' %}" height="24" alt="..." /></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"> </span></button>
           <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
@@ -62,38 +62,18 @@
           </div>
         </div>
       </nav>
-      <section id="home">
-        <div class="bg-holder" style="background-image:url({% static '/img/gallery/hero.png' %});background-position:center;background-size:cover;">
-        </div>
-        <!--/.bg-holder-->
-
-        <div class="container">
-          <div class="row align-items-center min-vh-50 min-vh-sm-75">
-            <div class="col-md-5 col-lg-6 order-0 order-md-1"><img class="w-100" src="{% static '/img/illustrations/hero-header.png' %}" alt="..." /></div>
-            <div class="col-md-7 col-lg-6 text-md-start text-center">
-              <h1 class="text-light fs-md-5 fs-lg-6">Get a Confidence</h1>
-              <p class="text-light">with Good-PT</p><a class="btn btn-primary" href="#" role="button">Start Presentation</a>
-            </div>
-          </div>
-        </div>
-      </section>
-
-
+      
       <!-- ============================================-->
       <!-- <section> begin ============================-->
-        <div class="container page-body" id="layout_container">
-            <div class="row">
-                <div class="col-sm-12">
-                    {% if messages %}
-                    <ul>
-                        {% for message in messages %}
-                        <li>{{ message }}</li>
-                        {% endfor %}
-                    </ul>
-                    {% endif %} {% block content %} {% endblock %}
-                </div>
-            </div>
-        </div>
+      <div>
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %} {% block content %} {% endblock %}
+      </div>
 
       <!-- ============================================-->
       <!-- <section> begin ============================-->
