edit board table

--- a/GoodPT/board/templates/board/question_list.html
+++ b/GoodPT/board/templates/board/question_list.html
@@ -2,7 +2,7 @@
 {% load board_filter %}
 {% block content %}
 <div class="container my-3" id="#qna_board">
-    <table class="table">
+    <table class="table" style="margin-top: 150px">
         <thead>
         <tr class="text-center table-primary">
             <th>No.</th>
