--- a/GoodPT/accounts/templates/login.html
+++ b/GoodPT/accounts/templates/login.html
@@ -48,7 +48,7 @@
                                     <a href="{% provider_login_url 'google' method='oauth2' %}"><img id="login-logo" src = '/static/img/google.png'></a>
                                 </div>
                             </div>
-                            <button type="submit" class="form_btn" name="login">로그인</button>
+                            <button id = "login_button" type="submit" class="form_btn" name="login">로그인</button>
                         </form>
                     </div>
                 </div>
