--- a/GoodPT/templates/layout.html
+++ b/GoodPT/templates/layout.html
@@ -45,10 +45,16 @@
             <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base">
               <li class="nav-item px-2" data-anchor="data-anchor"><a class="nav-link fw-medium active" aria-current="page" href="#home">Home</a></li>
               <li class="nav-item px-2" ><a class="nav-link" href="/board">Board</a></li>
-                            <li class="nav-item px-2" data-anchor="data-anchor"><a class="nav-link" href="#help">Help</a></li>
+              <li class="nav-item px-2" data-anchor="data-anchor"><a class="nav-link" href="#pricingTable">Price</a></li>
+              <li class="nav-item px-2" data-anchor="data-anchor"><a class="nav-link" href="#team">Team</a></li>
+              <li class="nav-item px-2" data-anchor="data-anchor"><a class="nav-link" href="#help">Help</a></li>
             </ul>
             {% if user.is_authenticated %}
-            <form class="ps-lg-5"><a class="btn btn-light order-1 order-lg-0" href="/accounts/logout">{{ user.username }} (로그아웃)
+            <form class="ps-lg-5"><a class="btn btn-light order-1 order-lg-0" href="/mypage">Mypage
+                <svg class="bi bi-person-fill" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                  <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
+                </svg></a>&nbsp;
+                <a class="btn btn-light order-1 order-lg-0" href="/accounts/logout">{{ user.username }}(로그아웃)
                 <svg class="bi bi-person-fill" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
                   <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
                 </svg></a></form>
