feat: 게시판 마크다운 문법 작용

--- a/GoodPT/templates/layout.html
+++ b/GoodPT/templates/layout.html
@@ -108,30 +108,12 @@
         <div class="container">
           <div class="row min-vh-75 min-vh-xl-50 pt-10">
             <div class="col-6 col-md-4 col-xl-3 mb-3">
-              <h5 class="lh-lg fw-bold text-white">HOSTING</h5>
+              <h5 class="lh-lg fw-bold text-white">KT 에이블스쿨</h5>
               <ul class="list-unstyled mb-md-4 mb-lg-0">
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Shared Hosting</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">VPS Hosting</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Cloud Hosting</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Wordpress Hosting</a></li>
-              </ul>
-            </div>
-            <div class="col-6 col-md-4 col-xl-3 mb-3">
-              <h5 class="lh-lg fw-bold text-white">FEATURES</h5>
-              <ul class="list-unstyled mb-md-4 mb-lg-0">
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Beginner Guide</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Move to Servion</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Website Builder</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Tools and Resources</a></li>
-              </ul>
-            </div>
-            <div class="col-6 col-md-4 col-xl-3 mb-3">
-              <h5 class="lh-lg fw-bold text-white">SUPPORT</h5>
-              <ul class="list-unstyled mb-md-4 mb-lg-0">
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Help Center</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Submit a Ticket</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Contact Us</a></li>
-                <li class="lh-lg"><a class="text-200 text-decoration-none" href="#!">Blog</a></li>
+                <li class="lh-lg"><a class="text-200 text-decoration-none" href="https://aivle.kt.co.kr/home/main/indexMain" target = "_blank">공식페이지</a></li>
+                <li class="lh-lg"><a class="text-200 text-decoration-none" href="https://cafe.naver.com/aivleschool" target = "_blank">네이버 Cafe</a></li>
+                <li class="lh-lg"><a class="text-200 text-decoration-none" href="https://www.youtube.com/playlist?list=PL_WCuvyChN3giYr6Xa2gWMOvRjDUrfb0a" target = "_blank">YouTube 채널</a></li>
+                <li class="lh-lg"><a class="text-200 text-decoration-none" href="https://www.instagram.com/aivlestory?igshid=YmMyMTA2M2Y%3D" target = "_blank">인스타그램</a></li>
               </ul>
             </div>
             <div class="col-xl-3 mb-3">
@@ -140,7 +122,6 @@
                 <li class="list-inline-item mr-2"><a class="text-decoration-none" href="#!"><img class="list-social-icon" src="{% static '/img/gallery/visa.png' %}" width="50" alt="..." /></a></li>
                 <li class="list-inline-item mr-2"><a class="text-decoration-none" href="#!"><img class="list-social-icon" src="{% static '/img/gallery/master-card.png' %}" width="50" alt="..." /></a></li>
                 <li class="list-inline-item mr-2"><a class="text-decoration-none" href="#!"><img class="list-social-icon" src="{% static '/img/gallery/union-pay.png' %}" width="50" alt="..." /></a></li>
-                <li class="list-inline-item"><a class="text-decoration-none" href="#!"><img class="list-social-icon" src="{% static '/img/gallery/express.png' %}" width="50" alt="..." /></a></li>
               </ul>
             </div>
           </div>
