--- a/GoodPT/board/templates/board/question_detail.html
+++ b/GoodPT/board/templates/board/question_detail.html
@@ -1,4 +1,6 @@
-{% extends "layout.html" %} {% block content %}
+{% extends "layout.html" %} 
+{% load board_filter %}
+{% block content %}
 <div class="container my-3">
     <!-- message 표시 -->
     {% if messages %}
@@ -15,7 +17,7 @@
     <h2 class="border-bottom py-2" style="margin-top: 150px">{{ question.subject }}</h2>
     <div class="card my-3">
         <div class="card-body">
-            <div class="card-text" style="white-space: pre-line">{{ question.content }}</div>
+            <div class="card-text">{{ question.content|mark }}</div>
             <div class="d-flex justify-content-end">
                 {% if question.modify_date %}
                 <div class="badge bg-light text-dark p-2 text-start mx-3">
@@ -56,7 +58,7 @@
     {% for answer in question.answer_set.all %}
     <div class="card my-3">
         <div class="card-body">
-            <div class="card-text" style="white-space: pre-line">{{ answer.content }}</div>
+            <div class="card-text">{{ answer.content|mark }}</div>
             <div class="d-flex justify-content-end">
                 {% if answer.modify_date %}
                 <div class="badge bg-light text-dark p-2 text-start mx-3">
