post and get data

--- a/GoodPT/presentation/templates/presentation.html
+++ b/GoodPT/presentation/templates/presentation.html
@@ -22,6 +22,9 @@
         <button class="play-button">
             <img src='../static/img/icons/play.png' id = "button-play-image">
         </button>
+        <button class="analyze-button">
+            <img src='../static/img/icons/analyze.png' id = "button-analyze-image">
+        </button>
         {% comment %} <a class="download-button">다운로드</a> {% endcomment %}
     </div>    
 </div>
